--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "jest",
     "server": "nodemon src/main.js"
   },
   "keywords": [],
@@ -13,11 +14,16 @@
     "@types/node": "^17.0.20",
     "body-parser": "^1.19.2",
     "express": "^4.17.3",
+    "multer": "^1.4.4",
     "pug": "^3.0.2",
     "typescript": "^4.5.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "nodemon": "^2.0.15"
+    "@types/jest": "^27.4.1",
+    "@types/supertest": "^2.0.11",
+    "jest": "^27.5.1",
+    "nodemon": "^2.0.15",
+    "supertest": "^6.2.2"
   }
 }
